🍎 MainSearch layout issue

--- a/src/pages/anki/components/MainSearch/index.less
+++ b/src/pages/anki/components/MainSearch/index.less
@@ -29,6 +29,9 @@
       &:focus-within {
         box-shadow: 0 0 0 2px fade(@primary-color, @outline-fade);
       }
+      .ant-input:focus {
+        z-index: 0;
+      }
     }
   }
 }
